<resources>
    <string name="app_name">AliesKotlin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_game">Start Game</string>
    <string name="info">Info</string>
    <string name="infoicon">infoIcon</string>
    <string name="alies_kotlin">Alies Kotlin</string>
    <string name="kotlinblueicon">KotlinBlueIcon</string>
    <string name="info_app">
        This is my first Kotlin App,
        it is developed by MarSeliN666,
        I hope you will enjoy it.
        Have Fun
    </string>
    <string name="end_game">End Game</string>
    <string name="word_lists">Word Lists</string>
    <string name="game">Game</string>
    <string name="teamname">TeamName</string>
    <string name="word">word</string>
    <string name="n_points">N-points</string>
    <string name="true_word">true</string>
    <string name="false_word">false</string>
    <string name="tv_30sec">30sec</string>
    <string name="time_over">Time has run out!</string>
    <string name="listname">ListName</string>
    <string name="game_settings">Game Settings</string>
    <string name="choose_time">Choose Time</string>
    <string name="this_is_image">this is image</string>
    <string name="list_choosing">List Choosing</string>
    <string name="todo">TODO</string>
    <string name="words_to_win">Words To Win</string>
    <string name="round_n">Round-N</string>

</resources>
