<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:fitsSystemWindows="true"
    tools:context=".Hello">

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/btn_background"
        android:focusable="auto"
        android:fontFamily="@font/rubik"
        android:text="@string/start_game"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvInfo"
        style="@style/LightRubik"
        android:focusable="auto"
        android:padding="10dp"
        android:text="@string/info"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartGame" />

    <TextView
        android:id="@+id/textView"
        style="@style/LightRubik"
        android:text="@string/alies_kotlin"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnStartGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/infoicon"
        android:src="@drawable/ic_info_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvInfo"
        app:layout_constraintTop_toBottomOf="@+id/btnStartGame" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/kotlin_light"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        app:constraint_referenced_ids="tvInfo,imageView"
        app:layout_constraintBottom_toBottomOf="@+id/tvInfo"
        app:layout_constraintEnd_toEndOf="@+id/tvInfo"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/tvInfo"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>