<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game"
    android:background="@drawable/background_gradient"
    android:paddingTop="24dp">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/looks_like_an_app_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_game"
            style="@style/LightRubik"
            android:text="@string/game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/im_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:contentDescription="back"
            android:padding="4dp"
            android:src="@drawable/ic_arrow_back_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/im_dark_light"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="back"
            android:padding="4dp"
            android:src="@drawable/ic_night_mode_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.yuyakaido.android.cardstackview.CardStackView
        android:id="@+id/card_word_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="13dp"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:padding="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.yuyakaido.android.cardstackview.CardStackView>

    <TextView
        android:id="@+id/tv_teamName"
        style="@style/LightRubik"
        android:layout_marginTop="8dp"
        android:text="@string/teamname"
        app:layout_constraintEnd_toEndOf="@+id/card_word_view"
        app:layout_constraintStart_toStartOf="@+id/card_word_view"
        app:layout_constraintTop_toBottomOf="@+id/looks_like_an_app_bar" />


    <TextView
        android:id="@+id/tv_timer"
        style="@style/LightRubik"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_30sec"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_endGame"
        app:layout_constraintEnd_toEndOf="@+id/tv_endGame"
        app:layout_constraintStart_toStartOf="@+id/tv_endGame" />
    <Button
        android:id="@+id/tv_endGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background2"
        android:fontFamily="@font/rubik"
        android:padding="8dp"
        android:text="@string/end_game"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_round"
        style="@style/LightRubik"
        android:text="Round-N"
        app:layout_constraintBottom_toTopOf="@+id/card_word_view"
        app:layout_constraintEnd_toEndOf="@+id/tv_teamName"
        app:layout_constraintStart_toStartOf="@+id/tv_teamName"
        app:layout_constraintTop_toBottomOf="@+id/tv_teamName" />

</androidx.constraintlayout.widget.ConstraintLayout>